Have revamped workout list row.

--- a/BodyProgress/Supporting Files/Localizable.strings
+++ b/BodyProgress/Supporting Files/Localizable.strings
@@ -29,6 +29,8 @@
 // Buttons
 "kButtonTitleOkay" = "Okay";
 "kButtonTitleSave" = "Save";
+"kButtonTitleStart" = "Start";
+"kButtonTitleCancel" = "Cancel";
 "kButtonTitleEdit" = "Edit";
 "kButtonTitleDelete" = "Delete";
 "kButtonTitleUnfavourite" = "Unfavourite";
