Have added minor improvements.

--- a/BodyProgress/Supporting Files/Localizable.strings
+++ b/BodyProgress/Supporting Files/Localizable.strings
@@ -8,8 +8,11 @@
 
 // Screen titles
 "kScreenTitleNewWorkout" = "New Workout";
+"kScreenTitleEditWorkout" = "Edit Workout";
 "kScreenTitleNewExercise" = "New Exercise";
+"kScreenTitleEditExercise" = "Edit Exercise";
 "kScreenTitleNewSet" = "New Set";
+"kScreenTitleEditSet" = "Edit Set";
 "kScreenTitleWorkouts" = "Workouts";
 "kScreenTitleExercises" = "Exercises";
 "kScreenTitleExerciseSets" = "Sets";
