Have added reference preview logics.

--- a/BodyProgress/Supporting Files/Localizable.strings
+++ b/BodyProgress/Supporting Files/Localizable.strings
@@ -42,6 +42,7 @@
 "kButtonTitleDelete" = "Delete";
 "kButtonTitleUnfavourite" = "Unfavourite";
 "kButtonTitleFavourite" = "Favourite";
+"kButtonTitleDone" = "Done";
 
 // Header titles
 "kHeaderName" = "Name";
