Have added minor UI issues fixes

--- a/BodyProgress/Supporting Files/Localizable.strings
+++ b/BodyProgress/Supporting Files/Localizable.strings
@@ -43,6 +43,7 @@
 "kButtonTitleUnfavourite" = "Unfavourite";
 "kButtonTitleFavourite" = "Favourite";
 "kButtonTitleDone" = "Done";
+"kButtonTitleReferences" = "References";
 
 // Header titles
 "kHeaderName" = "Name";
