--- a/BodyProgress/Supporting Files/Localizable.strings
+++ b/BodyProgress/Supporting Files/Localizable.strings
@@ -56,9 +56,12 @@
 "kPlaceholderBodyPart" = "Body Part";
 
 // Info messages
-"kInfoMsgNoWorkoutsAdded" = "No workouts added";
-"kInfoMsgNoExercisesAdded" = "No exercises added";
-"kInfoMsgNoExercisesSetsAdded" = "No exercise sets added";
+"kInfoMsgNoWorkoutsAddedTitle" = "No workouts added";
+"kInfoMsgNoWorkoutsAddedMessage" = "Use the '+' button at the top right corner to add a new workout.";
+"kInfoMsgNoExercisesAddedTitle" = "No exercises added";
+"kInfoMsgNoExercisesAddedMessage" = "Use the '+' button at the top right corner to add a new exercise.";
+"kInfoMsgNoExercisesSetsAddedTitle" = "No exercise sets added";
+"kInfoMsgNoExercisesSetsAddedMessage" = "Use the '+' button at the top right corner to add new the exercise set.";
 "kInfoMsgNoReferenceLinksAdded" = "No reference links added";
 
 // Preview messages
